force-app/main/default/objects/CC_Grupo_Colaborador__c/CC_Grupo_Colaborador__c.object-meta.xml
<CustomObject>
    <label>Grupo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>