force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_1_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>CC_1_Reclamacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC 1ª Reclamación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>