force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Agrupacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupacion__c</fullName>
    <label>Agrupación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All In One</fullName>
            </value>
            <value>
                <fullName>ImaginBank</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Cajeros</fullName>
            </value>
            <value>
                <fullName>Comercia</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>PromoCaixa</fullName>
                <label>Facilitea</label>
            </value>
            <value>
                <fullName>VidaCaixa</fullName>
            </value>
            <value>
                <fullName>AiO BCN</fullName>
            </value>
            <value>
                <fullName>AiO MAD</fullName>
            </value>
            <value>
                <fullName>AiO VAL</fullName>
            </value>
            <value>
                <fullName>Now In Teléfono Único</fullName>
            </value>
            <value>
                <fullName>AiO IBI</fullName>
            </value>
            <value>
                <fullName>AiO BRG</fullName>
                <isActive>false</isActive>
                <label>AiO BRG</label>
            </value>
            <value>
                <fullName>Grupo</fullName>
                <isActive>false</isActive>
                <label>Grupo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>