force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Canal_de_procedencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_de_procedencia__c</fullName>
    <label>Canal de procedencia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>