force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CC_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CC_Grupos_Colaboradores</relationshipName>
    <type>Lookup</type>
</CustomField>