force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Cuenta_Numero_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Cuenta_Numero_Oficina__c</fullName>
    <formula>CC_Cuenta__r.CC_Numero_Oficina__c</formula>
    <label>Nùmero oficina de la cuenta</label>
    <type>Text</type>
</CustomField>