force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <formula>CC_Cuenta__r.CC_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo electrónico</label>
    <type>Text</type>
</CustomField>