force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Empresa</valueSetName>
    </valueSet>
</CustomField>