force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Queue_Traslado__c.field-meta.xml
<CustomField>
    <fullName>CC_Queue_Traslado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cola traslado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>