force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traslados</fullName>
            </value>
            <value>
                <fullName>Remitidos</fullName>
            </value>
            <value>
                <fullName>Traslados y Remitidos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>