force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CC_Tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_cliente__c</fullName>
    <label>Tipo cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>