force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/CS_Permiso_Canal_BPO__c.field-meta.xml
<CustomField>
    <fullName>CS_Permiso_Canal_BPO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determina si este grupo puede o no enviar a Canal BPO</inlineHelpText>
    <label>Permiso Canal BPO</label>
    <type>Checkbox</type>
</CustomField>