force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/OS_GrupoTrabajo__c.field-meta.xml
<CustomField>
    <fullName>OS_GrupoTrabajo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>El dato informado debe corresponderse con la etiqueta del grupo público relacionado con este &apos;Grupo de trabajo&apos;.</inlineHelpText>
    <label>Grupo de Trabajo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>