force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/OS_Horario__c.field-meta.xml
<CustomField>
    <fullName>OS_Horario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Horario</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Grupos</relationshipName>
    <type>Lookup</type>
</CustomField>