force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/OS_Tematica__c.field-meta.xml
<CustomField>
    <fullName>OS_Tematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temática</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Grupo de Trabajo</relationshipLabel>
    <relationshipName>Grupos</relationshipName>
    <type>Lookup</type>
</CustomField>