force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_CarbonCopy2__c.field-meta.xml
<CustomField>
    <fullName>SAC_CarbonCopy2__c</fullName>
    <description>Carbon copy del campo email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC 2</label>
    <type>Email</type>
</CustomField>