force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_CarbonCopy3__c.field-meta.xml
<CustomField>
    <fullName>SAC_CarbonCopy3__c</fullName>
    <description>Carbon copy del email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC 3</label>
    <type>Email</type>
</CustomField>