force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SAC_DeveloperName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>