force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Email2__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email2__c</fullName>
    <description>Segundo email del grupo.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Para 2</label>
    <type>Email</type>
</CustomField>