force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Email3__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email3__c</fullName>
    <description>tercer email para el grupo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Para 3</label>
    <type>Email</type>
</CustomField>