force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Email__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email__c</fullName>
    <description>Campo donde se guardaran los emails del grupo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dirección de email al cual llegaran las consultas.</inlineHelpText>
    <label>Para</label>
    <type>Email</type>
</CustomField>