force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Externo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Externo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Externo</label>
    <type>Checkbox</type>
</CustomField>