force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_MaximoCasosDiarios__c.field-meta.xml
<CustomField>
    <fullName>SAC_MaximoCasosDiarios__c</fullName>
    <description>Máximo de casos diarios que admite el grupo</description>
    <label>Máximo casos diarios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>