force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_NivelGrupo__c.field-meta.xml
<CustomField>
    <fullName>SAC_NivelGrupo__c</fullName>
    <description>Muestra el nivel del grupo para los escalados</description>
    <label>Nivel de grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Nivel2</fullName>
                <label>Nivel 2</label>
            </value>
            <value>
                <fullName>SAC_Nivel3</fullName>
                <label>Nivel 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>