force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PeriodoConsulta__c.field-meta.xml
<CustomField>
    <fullName>SAC_PeriodoConsulta__c</fullName>
    <description>periodo de tiempo dentro del cual la consulta debe estar respondida</description>
    <label>Periodo Vencimiento Consulta(días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>