force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PermiteConsultas__c.field-meta.xml
<CustomField>
    <fullName>SAC_PermiteConsultas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para controlar si permite consultas</description>
    <label>Permite consultas</label>
    <type>Checkbox</type>
</CustomField>