force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PermiteDerivacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PermiteDerivacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para informar cuando un grupo puede derivar un caso</description>
    <label>Permite derivación</label>
    <type>Checkbox</type>
</CustomField>