force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PermiteEscalado__c.field-meta.xml
<CustomField>
    <fullName>SAC_PermiteEscalado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para indicar si el grupo permite escalado</description>
    <label>Permite escalado</label>
    <type>Checkbox</type>
</CustomField>