force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PermiteTareas__c.field-meta.xml
<CustomField>
    <fullName>SAC_PermiteTareas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para controlar si permite tareas</description>
    <label>Permite tareas</label>
    <type>Checkbox</type>
</CustomField>