force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaConsulta__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaConsulta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al objeto plantilla para establecer una relación entre grupos y las plantillas de las consultas</description>
    <label>Plantilla derivación consulta</label>
    <referenceTo>SAC_PlantillaRedaccion__c</referenceTo>
    <relationshipLabel>Grupos (Plantilla consulta)</relationshipLabel>
    <relationshipName>Grupos1</relationshipName>
    <type>Lookup</type>
</CustomField>