force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaConsultaId__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaConsultaId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAC_PlantillaConsultaID</label>
    <type>TextArea</type>
</CustomField>