force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaInteraccionId__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaInteraccionId__c</fullName>
    <description>Campo que almacena el ID de la email template asignada a la consulta de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SAC_PlantillaInteraccionId</label>
    <type>TextArea</type>
</CustomField>