force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaReclamacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaReclamacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup al objeto plantilla para establecer una relación entre grupos y las plantillas de las reclamaciones</description>
    <label>Plantilla derivación reclamación</label>
    <referenceTo>SAC_PlantillaRedaccion__c</referenceTo>
    <relationshipLabel>Grupos</relationshipLabel>
    <relationshipName>Grupos</relationshipName>
    <type>Lookup</type>
</CustomField>