force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaReclamante__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaReclamante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plantilla de email para el reclamante</description>
    <label>Plantilla reclamante</label>
    <referenceTo>SAC_PlantillaRedaccion__c</referenceTo>
    <relationshipLabel>Grupos (Plantilla reclamante)</relationshipLabel>
    <relationshipName>Grupos2</relationshipName>
    <type>Lookup</type>
</CustomField>