force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaReclamanteCartaPostal__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaReclamanteCartaPostal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plantilla de email para el reclamante con canal de respuesta carta postal</description>
    <label>Plantilla reclamante carta postal</label>
    <referenceTo>SAC_PlantillaRedaccion__c</referenceTo>
    <relationshipLabel>Grupos (Plantilla reclamante carta postal)</relationshipLabel>
    <relationshipName>Grupos3</relationshipName>
    <type>Lookup</type>
</CustomField>