force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PlantillaReclamanteId__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaReclamanteId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAC_PlantillaReclamanteId</label>
    <type>TextArea</type>
</CustomField>