force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_PorcentajeAsignacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PorcentajeAsignacion__c</fullName>
    <description>Porcentaje de asignación del grupo para el proyecto SAC</description>
    <inlineHelpText>Este campo sólo puede ser modificado desde la lista de Grupo</inlineHelpText>
    <label>% de asignación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>