force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Presidencia__c.field-meta.xml
<CustomField>
    <fullName>SAC_Presidencia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chechbox para indicar si el grupo debe resolver casos que tengan la opción presidencia activada.</description>
    <label>Presidencia</label>
    <type>Checkbox</type>
</CustomField>