force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_Sensible__c.field-meta.xml
<CustomField>
    <fullName>SAC_Sensible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para indicar si el grupo puede resolver casos con la opción sensible activada</description>
    <label>Sensible</label>
    <type>Checkbox</type>
</CustomField>