force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_TienePropietario__c.field-meta.xml
<CustomField>
    <fullName>SAC_TienePropietario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo del grupo colaborador que parametriza si las consultas internas del objeto Interacción tienen propietario</description>
    <label>Tiene Propietario</label>
    <type>Checkbox</type>
</CustomField>