force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SAC_TieneUsuariosActivos__c.field-meta.xml
<CustomField>
    <fullName>SAC_TieneUsuariosActivos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar si al menos alguno de los usuarios del grupo está activo</description>
    <label>Tiene usuarios ACTIVOS</label>
    <type>Checkbox</type>
</CustomField>