force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_CierreAutomaticoSR__c.field-meta.xml
<CustomField>
    <fullName>SEG_CierreAutomaticoSR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para cerrar automáticamente las SR asignadas a este grupo colaborador.</description>
    <label>Cierre Automático Caso</label>
    <type>Checkbox</type>
</CustomField>