force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_envio_a_TaskConnect__c.field-meta.xml
<CustomField>
    <fullName>SEG_envio_a_TaskConnect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CheckBox que indica si el Grupo pertenece a TaskConnect</description>
    <label>Envío a TaskConnect</label>
    <type>Checkbox</type>
</CustomField>