force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_EquipoCaso__c.field-meta.xml
<CustomField>
    <fullName>SEG_EquipoCaso__c</fullName>
    <description>Equipo de caso asociado (Setup)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipo de caso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>