force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_EstadoSincronizacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_EstadoSincronizacion__c</fullName>
    <label>Estado sincronización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sincronizado</fullName>
            </value>
            <value>
                <fullName>No sincronizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>