force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Grupo_Estandar__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupo_Estandar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grupo estándar</label>
    <type>Checkbox</type>
</CustomField>