force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Grupo_padre__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupo_padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Padre 1r Nivel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo Operativo Segmentos</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SEG_Padre__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Grupos Hijos</relationshipLabel>
    <relationshipName>Grupos1</relationshipName>
    <type>Lookup</type>
</CustomField>