force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_GrupoPadre2nivel__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoPadre2nivel__c</fullName>
    <formula>SEG_Grupo_padre__r.SEG_Grupo_padre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo Padre 2º nivel</label>
    <type>Text</type>
</CustomField>