force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_GrupoSegmentos__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoSegmentos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grupo Segmentos</label>
    <type>Checkbox</type>
</CustomField>