force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca para inactivar un grupo de Segmentos</description>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>