force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_No_visible__c.field-meta.xml
<CustomField>
    <fullName>SEG_No_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No visible</label>
    <type>Checkbox</type>
</CustomField>