force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_NombreGrupoMails__c.field-meta.xml
<CustomField>
    <fullName>SEG_NombreGrupoMails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Este será el nombre del grupo que aparecerá en la firma de los emails.</inlineHelpText>
    <label>Nombre Grupo en Mails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>