force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_NotaGrupoPlantillaCAT__c.field-meta.xml
<CustomField>
    <fullName>SEG_NotaGrupoPlantillaCAT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nota Grupo Plantilla CAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>