force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_NotaGrupoPlantillaES__c.field-meta.xml
<CustomField>
    <fullName>SEG_NotaGrupoPlantillaES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nota Grupo Plantilla ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>