force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Tipo_de_tarea_CSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tipo_de_tarea_CSO__c</fullName>
    <label>Tipo de tarea CSO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEG_Tipo_de_tarea_CSO</valueSetName>
    </valueSet>
</CustomField>