force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Tipologia__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tipologia__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Firmas</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>CSO FFEE</fullName>
            </value>
            <value>
                <fullName>BO FFEE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>