force-app/main/default/objects/CC_Grupo_Colaborador__c/fields/SEG_Valores_Org__c.field-meta.xml
<CustomField>
    <fullName>SEG_Valores_Org__c</fullName>
    <formula>IF ( INCLUDES ( SEG_Organizacion__c , &quot;Banca Corporativa&quot; ), &quot;bcorpo &quot;,null ) &amp;
IF ( INCLUDES ( SEG_Organizacion__c , &quot;Centro Empresas&quot; ), &quot;centro &quot;,null ) &amp;
IF ( INCLUDES ( SEG_Organizacion__c , &quot;Instituciones&quot; ), &quot;insti &quot;,null ) &amp;
IF ( INCLUDES ( SEG_Organizacion__c , &quot;Centro Soporte Especialistas&quot; ), &quot;sopor &quot;,null ) &amp;
IF ( INCLUDES ( SEG_Organizacion__c , &quot;Financiación Estructurada&quot; ), &quot;finan; &quot;,null )</formula>
    <label>Valores Organización</label>
    <type>Text</type>
</CustomField>