force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_CentroCaixaBank.recordType-meta.xml
<RecordType>
    <fullName>CC_CentroCaixaBank</fullName>
    <active>true</active>
    <label>Centro CaixaBank</label>
</RecordType>