force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_Comunicacion_Informativa.recordType-meta.xml
<RecordType>
    <fullName>CC_Comunicacion_Informativa</fullName>
    <active>true</active>
    <label>Comunicación Informativa</label>
</RecordType>