force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_Grupo_Colaborador.recordType-meta.xml
<RecordType>
    <fullName>CC_Grupo_Colaborador</fullName>
    <active>true</active>
    <label>Grupo colaborador</label>
</RecordType>