force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_Grupo_Segundo_Nivel.recordType-meta.xml
<RecordType>
    <fullName>CC_Grupo_Segundo_Nivel</fullName>
    <active>true</active>
    <label>Grupo Segundo Nivel</label>
</RecordType>