force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_Grupo_Tercer_Nivel.recordType-meta.xml
<RecordType>
    <fullName>CC_Grupo_Tercer_Nivel</fullName>
    <active>true</active>
    <description>Grupos que son de Tercer nivel</description>
    <label>Grupo Tercer Nivel</label>
</RecordType>