force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/CC_GrupoMaximo.recordType-meta.xml
<RecordType>
    <fullName>CC_GrupoMaximo</fullName>
    <active>true</active>
    <description>Grupos de usuario para la gestión de Maximo</description>
    <label>Grupo Maximo</label>
</RecordType>