force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/OS_GrupoTrabajo.recordType-meta.xml
<RecordType>
    <fullName>OS_GrupoTrabajo</fullName>
    <active>true</active>
    <label>Grupo de Trabajo</label>
</RecordType>