force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SAC_GrupoLetradosDT.recordType-meta.xml
<RecordType>
    <fullName>SAC_GrupoLetradosDT</fullName>
    <active>true</active>
    <label>Grupo letrados DT</label>
</RecordType>