force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SAC_GrupoProveedores.recordType-meta.xml
<RecordType>
    <fullName>SAC_GrupoProveedores</fullName>
    <active>true</active>
    <description>Grupo de proveedores para el proyecto de SAC Reclamaciones</description>
    <label>Grupo proveedores</label>
</RecordType>