force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SAC_GrupoResponsableAccion.recordType-meta.xml
<RecordType>
    <fullName>SAC_GrupoResponsableAccion</fullName>
    <active>true</active>
    <description>Equipo responsable de la gestión de las acciones para el Proyecto de SAC Reclamaciones</description>
    <label>Grupo Responsable de la acción</label>
</RecordType>