force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SAC_Letrados.recordType-meta.xml
<RecordType>
    <fullName>SAC_Letrados</fullName>
    <active>true</active>
    <description>Grupo de Letrados para el proyecto de SAC Reclamaciones</description>
    <label>Letrados</label>
</RecordType>