force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SEG_GrupoAutomaticoSegmentos.recordType-meta.xml
<RecordType>
    <fullName>SEG_GrupoAutomaticoSegmentos</fullName>
    <active>true</active>
    <label>Grupo Automático Segmentos</label>
</RecordType>