force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SEG_GrupoOperativoSegmentos.recordType-meta.xml
<RecordType>
    <fullName>SEG_GrupoOperativoSegmentos</fullName>
    <active>true</active>
    <label>Grupo Operativo Segmentos</label>
</RecordType>