force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SPV_GrupoDeTareas.recordType-meta.xml
<RecordType>
    <fullName>SPV_GrupoDeTareas</fullName>
    <active>true</active>
    <description>Record Type para los grupos de tareas del proyecto de Supervisores</description>
    <label>Grupo de tareas</label>
</RecordType>