force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SPV_GrupoGestor.recordType-meta.xml
<RecordType>
    <fullName>SPV_GrupoGestor</fullName>
    <active>true</active>
    <description>Record Type para los grupos gestores del proyecto de Supervisores</description>
    <label>Grupo gestor</label>
</RecordType>