force-app/main/default/objects/CC_Grupo_Colaborador__c/recordTypes/SPV_GrupoLetrado.recordType-meta.xml
<RecordType>
    <fullName>SPV_GrupoLetrado</fullName>
    <active>true</active>
    <description>Record Type para los grupos letrados del proyecto de Supervisores</description>
    <label>Grupo letrado</label>
</RecordType>