force-app/main/default/objects/CC_Grupo_Colaborador__c/validationRules/SAC_MaximosCasosDiarios.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_MaximosCasosDiarios</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &apos;SAC_General&apos;,RecordType.DeveloperName = &apos;SAC_GrupoProveedores&apos;,ISBLANK(SAC_MaximoCasosDiarios__c))</errorConditionFormula>
    <errorDisplayField>SAC_MaximoCasosDiarios__c</errorDisplayField>
    <errorMessage>Debes informar el número de máximos casos diarios para poder guardar el grupo</errorMessage>
</ValidationRule>